<resources>
    <string name="app_name">表情喵</string>

    <string name="main_first">首页</string>
    <string name="main_second">表情包</string>
    <string name="main_third">发现</string>
    <string name="main_middle">制作</string>

    <string name="main_fourth">我的</string>

    <!--下拉加载-->
    <string name="loading">正在加载中...</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="load_end">没有更多数据</string>
    <string name="network_err">Simulation network error</string>

    <!--TakePhoto-->
    <string name="tip_type_not_image">选择的不是图片</string>
    <string name="tip_no_camera">没有相机</string>
    <string name="tip_tips">提示</string>
    <string name="tip_compress">正在压缩照片...</string>
    <string name="tip_compress_failed">"%1$s 图片压缩失败:%2$s picturePath:%3$s"</string>
    <string name="msg_crop_failed">"有裁切失败的图片"</string>
    <string name="msg_compress_failed">"有压缩失败的图片"</string>
    <string name="msg_crop_canceled">" 取消裁切"</string>
    <string name="msg_operation_canceled">"操作被取消"</string>
    <string name="tip_permission_camera">没有使用相机的权限，请在权限管理中开启</string>
    <string name="tip_permission_storage">没有使用SD卡的权限，请在权限管理中开启</string>
    <string name="tip_permission_camera_storage">没有使用相机和SD卡的权限，请在权限管理中开启</string>
    <!--custom multipleimageselect -->
    <string name="album_view">选择图片</string>
    <string name="image_view">单击选择</string>
    <string name="add">确定</string>
    <string name="selected">已选</string>
    <string name="limit_exceeded">最多能选 %d 张</string>
    <string name="tvSplishCat">表情猫,专属你的表情</string>
    <string name="share_more">更多</string>
    <string name="share_collection">收藏</string>
    <string name="share_qq">QQ</string>
    <string name="share_wechat">微信</string>
    <string name="share_edit">改图</string>
    <string name="send">发送</string>
    <string name="make">制作表情</string>
    <string name="back">返回</string>
    <string name="hintInputText">点我输入文字</string>


</resources>
